sand-macros/tests/cases/fail_event_generic_missing_type.stderr
error: #[event] generic handlers must specify the event type, e.g. `Event<MyEvent>` or `DamageEvent<MyDamageEvent>`
 --> tests/cases/fail_event_generic_missing_type.rs:5:19
  |
5 | pub fn bad(event: Event) {
  |                   ^^^^^

warning: unused import: `sand_core::prelude::*`
 --> tests/cases/fail_event_generic_missing_type.rs:1:5
  |
1 | use sand_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
